<resources>
    <string name="app_name">RU Bites</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up to get started</string>
    <string name="login">Login</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="signup_link">Don\'t have an account? Sign up</string>
    <string name="signin_link">I\'m already a member, Sign in</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="full_name">Full Name</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="browse_restaurants">Browse Restaurants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="restaurant">Restaurant Name</string>
    <string name="location">New Brunswick, NJ</string>
    <string name="view_offers">View available offers</string>
    <string name="orders">Orders</string>
    <string name="browse">Browse</string>
    <string name="profile">Profile</string>
    <string name="feed_welcome">Welcome to RU Bites!</string>
    <string name="current_offers">Current Offers</string>
</resources>
