<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="130dp"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome"
        android:textColor="@color/lightGray"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="40sp"
        android:fontFamily="@font/montserrat_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/signUpTextView"
        android:layout_above="@+id/signUpButton"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:autofillHints="@string/full_name"
            android:hint="@string/full_name"
            android:textColor="@color/darkGray"
            android:textColorHint="@color/lightGray"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:textColor="@color/darkGray"
            android:textColorHint="@color/lightGray"
            android:backgroundTint="@color/red"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:autofillHints="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/darkGray"
            android:textColorHint="@color/lightGray"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="test"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:visibility="invisible"/>


    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/sign_up_btn"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/rounded_corners"
        android:layout_above="@id/linkToSignIn"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/linkToSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/signin_link"
        android:textColor="@color/darkGray"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bold"/>


</RelativeLayout>