<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RestaurantCard">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardMaxElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/restaurantImg"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/tacoria_foreground" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="15dp"
                android:id="@+id/restaurantName"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/restaurant"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/restaurantLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/location"
                android:textColor="@color/darkGray"
                android:textSize="15dp" />

            <Button
                android:id="@+id/viewOffersButton"
                android:layout_width="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/view_offers"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_bold"
                android:background="@drawable/rounded_corners"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>