<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/feedBlob"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:background="@drawable/feedblob"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/welcomeFeedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Welcome to \nRU Bites!"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:lines="2"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_icon_container"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:elevation="12dp"
        app:cardCornerRadius="30dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/browse_icon_container"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/profile_icon_container"
        android:elevation="12dp"
        app:cardCornerRadius="30dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/browse_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_browse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/orders_icon_container"
        android:layout_below="@id/browse_icon_container"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:elevation="12dp"
        app:cardCornerRadius="30dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/orders_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_orders"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/profile_text"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_toStartOf="@id/profile_icon_container"
        android:layout_alignTop="@id/profile_icon_container"
        android:layout_alignBottom="@id/profile_icon_container"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse"
        android:id="@+id/browse_text"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_toStartOf="@id/browse_icon_container"
        android:layout_alignTop="@id/browse_icon_container"
        android:layout_alignBottom="@id/browse_icon_container"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        android:id="@+id/orders_text"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_toStartOf="@id/orders_icon_container"
        android:layout_alignTop="@id/orders_icon_container"
        android:layout_alignBottom="@id/orders_icon_container"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/current_offers_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_offers"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginStart="10dp"
        android:layout_below="@id/orders_icon_container"
        android:layout_marginTop="40dp"

        android:textColor="#000000"
        android:textSize="25dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_offers_textview"
        android:clipToPadding="false"
        android:orientation="horizontal"
        tools:listitem="@layout/offer_item" />

</RelativeLayout>